# univo-svis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: app.yaml
scripts/: bootstrap_env.sh  calibrate_threshold.py  compare_checkpoints.py  reconstruct_split.py  run_dev.py  smoke_test.py  validate_runtime.py  verify.sh
src/univo_svis/: __init__.py  bootstrap.py  main.py
src/univo_svis/core/: bootstrap.py  config.py  i18n.py  logger.py
src/univo_svis/detection/: annotator.py  detector.py  entities.py  fusion.py  image_analysis.py  roboflow_resolver.py  video_worker.py
src/univo_svis/infrastructure/config/: yaml_config_loader.py
src/univo_svis/ui/: home_view.py  image_analysis_view.py  live_monitor_view.py  main_window.py
src/univo_svis/ui/widgets/: control_panel.py  image_viewer.py  metrics_panel.py  model_source_panel.py
tests/unit/: test_config_loader.py  test_fusion_policy.py
